Sanna only works for typescript now.
Now the tests have to be build using the typescript compuler `tsc`
before thay can be run.

- Remove the Hooks and context

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,13 @@
 {
+  "exclude": [],
+  "include": ["src"],
   "compilerOptions": {
-    "target": "es2015",
-    "module": "commonjs",
-    "sourceMap": true,
-    "declaration": true,
     "outDir": "./dist",
+    "pretty": true,
     "strict": true,
-    "types": ["node"]
+    "sourceMap": true,
+    "module": "nodenext",
+    "declaration": true,
+    "moduleResolution": "nodenext"
   }
 }
