--- a/package.json
+++ b/package.json
@@ -1,21 +1,25 @@
 {
   "name": "sanna",
   "version": "0.0.8",
-  "main": "lib/index.js",
+  "main": "dist/index.js",
   "description": "Productivity focused testing for node.js",
   "license": "MIT",
   "bugs": "https://github.com/agirorn/sanna/issues",
   "repository": "git://github.com/agirorn/sanna.git",
   "homepage": "https://github.com/agirorn/sanna#readme",
   "author": "Ægir Örn Símonarson <agirorn@gmail.com>",
+  "type": "module",
   "bin": {
     "sanna": "./bin/sanna.js"
   },
   "scripts": {
     "ci": "yarn coverage && yarn lint",
-    "lint": "eslint bin lib tests examples",
-    "test:copy": "yarn sanna tests",
-    "test": "./bin/sanna.js tests",
+    "compile": "tsc --build",
+    "lint": "eslint bin src scripts .eslintrc.*",
+    "lint:with-test": "eslint bin src tests examples .eslintrc.*",
+    "test:copy": "NODE_OPTIONS=--enable-source-maps yarn sanna tests",
+    "test:new": "NODE_OPTIONS=--enable-source-maps node ./dist/tests/all.js",
+    "test": "NODE_OPTIONS=--enable-source-maps ./bin/sanna.js -p '.test.js' tests",
     "coverage": "magic-carpet",
     "dev": "magic-carpet",
     "dev:exec": "magic-carpet"
@@ -27,17 +31,26 @@
     "lib"
   ],
   "devDependencies": {
-    "check-types": "^11.1.2",
+    "@types/node": "^18.11.13",
+    "@types/source-map-support": "^0.5.6",
+    "@typescript-eslint/eslint-plugin": "^5.46.0",
+    "@typescript-eslint/parser": "^5.46.0",
+    "babel-eslint": "^10.1.0",
+    "c8": "^7.5.0",
+    "check-types": "^11.2.2",
     "current-line": "^1.0.1",
+    "eslint-config-viking": "^0.0.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "execa": "^5.0.0",
     "invert-promise": "^2.0.0",
     "magic-carpet": "^0.0.4",
+    "prettier-config-viking": "^0.0.0",
     "sanna": "../sanna",
-    "standard": "*"
+    "standard": "*",
+    "typescript": "^4.9.4"
   },
   "dependencies": {
-    "@types/node": "^18.6.3",
-    "c8": "^7.5.0",
     "chalk": "^4.1.0",
     "cli-highlight": "^2.1.10",
     "concordance": "^5.0.1",
@@ -47,8 +60,7 @@
     "partial-compare": "^1.0.1",
     "ramda": "^0.27.1",
     "readdirp": "^3.5.0",
-    "ts-node": "^10.8.1",
-    "typescript": "^4.7.4"
+    "source-map-support": "^0.5.21"
   },
   "keywords": [
     "assert",
@@ -66,5 +78,8 @@
     "sanna",
     "testing",
     "unit"
-  ]
+  ],
+  "engines": {
+    "node": ">=16.0.0"
+  }
 }
